# TinyBMS

./: .gitignore  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_PROPOSAL_EVENT_BUS.md  CMakeLists.txt  ESP-IDF_MIGRATION.md  EVENT_BUS_PHASE1_IMPLEMENTATION.md  EVENT_BUS_PHASE2_IMPLEMENTATION.md  EVENT_BUS_PHASE3_IMPLEMENTATION.md  EVENT_BUS_PHASE4_IMPLEMENTATION.md  MIGRATION_EVENTBUS_STATUS.md  PR_DESCRIPTION.md  PR_DESCRIPTION_COMPLETE.md  README.md  README_ESP-IDF_PHASE1.md  README_ESP-IDF_PHASE2.md  README_MAPPING.md  README_config_manager.md  README_cvl.md  README_event_bus.md  README_logger.md  README_phase1.md  README_system_init.md  README_uart.md  README_watchdog.md  SYNTHESE_REVUE_COHERENCE.md  app.js  app_bootstrap.js  config-tinybms.js  config_manager.h  dashboard.js  index_bootstrap.html  json_builders.cpp  logger.cpp  logger.h  main.ino  partitions.csv  platformio.ini  rtos_config.h  rtos_tasks.h  sdkconfig.defaults  (+15 more)
archive/: README.md
components/hal_idf/: CMakeLists.txt  esp32_can_idf.cpp  esp32_can_idf.h  esp32_factory_idf.cpp  esp32_factory_idf.h  esp32_gpio_idf.cpp  esp32_gpio_idf.h  esp32_storage_idf.cpp  esp32_storage_idf.h  esp32_timer_idf.cpp  esp32_timer_idf.h  esp32_uart_idf.cpp  esp32_uart_idf.h  esp32_watchdog_idf.cpp  esp32_watchdog_idf.h
data/: Tiny_reg_mapping.xlsx  app.js  app_bootstrap.js  charts.js  config-tinybms.js  config.json  dashboard.js  index.html  monitoring.js  settings.js  statistics.js  style.css  tiny_read.json  tiny_read_4vic.json  tiny_rw_bms.json  tinybms_config.html
docs/: ARCHITECTURE_QUICK_REFERENCE.md  PROJECT_OVERVIEW.md  (+36 more)
(+188 files in other folders)
